mpeg12dec: Support invalid field motion types, Fixes Ticket539

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>